changed and created new models and added new swagger apis
