# server/api/routes/routes.js
@@ -14,5 +14,18 @@ var appRouter = function (app, database) {
         signController.signUp(database, req.body, res);
     });
 
+
+    app.get('user/:userId', function( req, res) {
+        userController.home(req.params.userId, res)
+    });
+
+    app.get('user/:userId/longitude/:longitude/latitude/:latitude', function( req, res) {
+        userController.home(req.params, res);
+    })
+
+    app.get('places/:placeId', function( req, res) {
+        placeController.placeInfo(req.params, res);
+    })
+
 };
 module.exports = appRouter;
